Human patch from altitdb/patiolegal This commit is based on the source code from the following commit: http://github.com/altitdb/patiolegal/commit/2b84c44e4728f79b3766c7717b866ae05df7f59a The mentioned commit triggered the following Travis build: http://travis-ci.org/altitdb/patiolegal/builds/430821584.